--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
     "@material-ui/styles": "^4.4.3",
     "leaflet": "^1.5.1",
     "react": "^16.9.0",
